# chat_server_rooms

./: CMakeLists.txt  README.md  docker-compose.yml
include/: db.h  db_queue.h  ipc_server.h  logger.h  protocol.h
scripts/: Dockerfile  Dockerfile.app  build_docker  build_docker_images  du24  init_db.sh  start_chat_room_env  stop_chat_room_env  test_init.sql
scripts/configs/: pgadmin_servers.json
src/: ipc_server.cpp  main.cpp
src/db/: db_main.cpp
src/logger/: logger.cpp
src/server/: server_main.cpp
tests/: CMakeLists.txt  test_main.cpp
